TercerPunto/ProductoPuntoParser.py
# Generated from ProductoPunto.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ProductoPuntoParser ( Parser ):

    grammarFileName = "ProductoPunto.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'matrizA'", "'='", "'matrizB'", "'['", 
                     "','", "']'", "'producto'", "'('", "')'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "NUM", "WS" ]

    RULE_program = 0
    RULE_declaracionMatrices = 1
    RULE_matrizA = 2
    RULE_matrizB = 3
    RULE_listaFilas = 4
    RULE_fila = 5
    RULE_listaNum = 6
    RULE_operacion = 7

    ruleNames =  [ "program", "declaracionMatrices", "matrizA", "matrizB", 
                   "listaFilas", "fila", "listaNum", "operacion" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    NUM=10
    WS=11

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracionMatrices(self):
            return self.getTypedRuleContext(ProductoPuntoParser.DeclaracionMatricesContext,0)


        def operacion(self):
            return self.getTypedRuleContext(ProductoPuntoParser.OperacionContext,0)


        def EOF(self):
            return self.getToken(ProductoPuntoParser.EOF, 0)

        def getRuleIndex(self):
            return ProductoPuntoParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = ProductoPuntoParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 16
            self.declaracionMatrices()
            self.state = 17
            self.operacion()
            self.state = 18
            self.match(ProductoPuntoParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracionMatricesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def matrizA(self):
            return self.getTypedRuleContext(ProductoPuntoParser.MatrizAContext,0)


        def matrizB(self):
            return self.getTypedRuleContext(ProductoPuntoParser.MatrizBContext,0)


        def getRuleIndex(self):
            return ProductoPuntoParser.RULE_declaracionMatrices

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracionMatrices" ):
                listener.enterDeclaracionMatrices(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracionMatrices" ):
                listener.exitDeclaracionMatrices(self)




    def declaracionMatrices(self):

        localctx = ProductoPuntoParser.DeclaracionMatricesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaracionMatrices)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 20
            self.matrizA()
            self.state = 21
            self.matrizB()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MatrizAContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def listaFilas(self):
            return self.getTypedRuleContext(ProductoPuntoParser.ListaFilasContext,0)


        def getRuleIndex(self):
            return ProductoPuntoParser.RULE_matrizA

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMatrizA" ):
                listener.enterMatrizA(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMatrizA" ):
                listener.exitMatrizA(self)




    def matrizA(self):

        localctx = ProductoPuntoParser.MatrizAContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_matrizA)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 23
            self.match(ProductoPuntoParser.T__0)
            self.state = 24
            self.match(ProductoPuntoParser.T__1)
            self.state = 25
            self.listaFilas()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MatrizBContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def listaFilas(self):
            return self.getTypedRuleContext(ProductoPuntoParser.ListaFilasContext,0)


        def getRuleIndex(self):
            return ProductoPuntoParser.RULE_matrizB

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMatrizB" ):
                listener.enterMatrizB(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMatrizB" ):
                listener.exitMatrizB(self)




    def matrizB(self):

        localctx = ProductoPuntoParser.MatrizBContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_matrizB)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 27
            self.match(ProductoPuntoParser.T__2)
            self.state = 28
            self.match(ProductoPuntoParser.T__1)
            self.state = 29
            self.listaFilas()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListaFilasContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def fila(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ProductoPuntoParser.FilaContext)
            else:
                return self.getTypedRuleContext(ProductoPuntoParser.FilaContext,i)


        def getRuleIndex(self):
            return ProductoPuntoParser.RULE_listaFilas

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListaFilas" ):
                listener.enterListaFilas(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListaFilas" ):
                listener.exitListaFilas(self)




    def listaFilas(self):

        localctx = ProductoPuntoParser.ListaFilasContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_listaFilas)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 31
            self.match(ProductoPuntoParser.T__3)
            self.state = 32
            self.fila()
            self.state = 37
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5:
                self.state = 33
                self.match(ProductoPuntoParser.T__4)
                self.state = 34
                self.fila()
                self.state = 39
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 40
            self.match(ProductoPuntoParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FilaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def listaNum(self):
            return self.getTypedRuleContext(ProductoPuntoParser.ListaNumContext,0)


        def getRuleIndex(self):
            return ProductoPuntoParser.RULE_fila

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFila" ):
                listener.enterFila(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFila" ):
                listener.exitFila(self)




    def fila(self):

        localctx = ProductoPuntoParser.FilaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_fila)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            self.match(ProductoPuntoParser.T__3)
            self.state = 43
            self.listaNum()
            self.state = 44
            self.match(ProductoPuntoParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListaNumContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUM(self, i:int=None):
            if i is None:
                return self.getTokens(ProductoPuntoParser.NUM)
            else:
                return self.getToken(ProductoPuntoParser.NUM, i)

        def getRuleIndex(self):
            return ProductoPuntoParser.RULE_listaNum

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListaNum" ):
                listener.enterListaNum(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListaNum" ):
                listener.exitListaNum(self)




    def listaNum(self):

        localctx = ProductoPuntoParser.ListaNumContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_listaNum)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            self.match(ProductoPuntoParser.NUM)
            self.state = 51
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5:
                self.state = 47
                self.match(ProductoPuntoParser.T__4)
                self.state = 48
                self.match(ProductoPuntoParser.NUM)
                self.state = 53
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OperacionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ProductoPuntoParser.RULE_operacion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOperacion" ):
                listener.enterOperacion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOperacion" ):
                listener.exitOperacion(self)




    def operacion(self):

        localctx = ProductoPuntoParser.OperacionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_operacion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.match(ProductoPuntoParser.T__6)
            self.state = 55
            self.match(ProductoPuntoParser.T__7)
            self.state = 56
            self.match(ProductoPuntoParser.T__0)
            self.state = 57
            self.match(ProductoPuntoParser.T__4)
            self.state = 58
            self.match(ProductoPuntoParser.T__2)
            self.state = 59
            self.match(ProductoPuntoParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





